[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cohost"
version = "0.2.6"
description = "Unofficial Python API wrapper for Cohost.org - the fourth website!"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = [ "cohost.org", "cohost", "api" ]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries"
]
authors = [ 
    { name = "Val Knight", email = "val@valknight.xyz" }
]
maintainers = [
    { name = "Val Knight", email = "val@valknight.xyz" }
]
dependencies = [
    "requests"
]

[project.urls]
repository = "https://github.com/valknight/cohost.py"

[tool.setuptools]
packages = ["cohost", "cohost.models"]
